# aish

./: .gitattributes  Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml
.pearls/: config.toml  issues.jsonl
crates/aish-run/: Cargo.toml
crates/aish-run/src/: cli.rs  config.rs  detectors.rs  main.rs  policy.rs  pty.rs  render.rs  runner.rs  signals.rs  store.rs
docs/: CONFIG_REFERENCE.md  NEXT_ITERATION.md  PLAN.md  index.html
examples/: config-ci.toml  config-dev-shims.toml  config-minimal.toml  config.toml
shell/: init.bash  init.zsh
specs/: initial.md
