[package]
name = "aish-run"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "PTY-first shell command runner with logs, summaries, and tool-aware failure excerpts"
readme = "../../README.md"
license = "MIT"
authors = ["AISH Contributors"]
documentation = "https://docs.rs/aish-run"
homepage = "https://github.com/origo-labs/aish"
repository = "https://github.com/origo-labs/aish"
keywords = ["cli", "shell", "developer-tools", "pty", "logging"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.31", features = ["derive"] }
portable-pty = "0.8.1"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
time = { version = "0.3.37", features = ["formatting", "macros", "parsing", "serde"] }
toml = "0.8.20"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
